fixed some spacing issues

--- a/main.css
+++ b/main.css
@@ -23,8 +23,7 @@
     border-radius: 80px;
     background: 600px solid #ffffff;
     line-height: 10%;
-    margin-bottom: 0px;
-}
+    }
 
 #myname{
     text-align: center;
@@ -39,7 +38,6 @@
     text-align: left;
     padding-left: 27%;
     padding-right: 24%;
-    padding-bottom: 25px;
     color: #838383;
     font-size: 70%
     
@@ -49,6 +47,7 @@
     font-family: "Bebas Neue";
     font-size: 140%;
     margin-left: 3%;
+    margin-top: 100px;
 }
 
 #projectcards{
@@ -71,25 +70,26 @@
     font-family: "Bebas Neue";
     font-size: 140%;
     margin-left: 3%;
+    margin-top: 100px;
 }
 
 #skillsecs{
     display: flex;
-    margin-left: 5%;
+    margin-left: 20%;
 }
 
 .sec{
     font-family: "Arvo";
-    padding-left: 85px;
-    flex-grow: 1;
-    flex-basis: 1px;
+    padding-left: 150px;
+
 }
 
 #hobbies{
     margin-left: 3%;
     font-family: "Bebas Neue";
     font-size: 140%;
-    
+    margin-top: 100px;
+
 }
 
 #footer{
